--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <a href="#about">About</a>
         </li>
         <li>
+          <a href="/react-ultimate-resume">Portfolio</a>
+        </li>
+        <li>
           <a href="#experience">Experience</a>
         </li>
         <li>
@@ -75,14 +78,13 @@
           </div>
           <div class="col-md-8">
             <p>
-              Software Engineer with 5 years experience specializing in backend,
-              frontend UI, and Cross-platform desktop application development.
-              Possess comprehensive knowledge of JavaScript concepts with solid
-              Understanding of asynchronous programming. Super nerd who loves
-              Linux, macOS and enjoys to customize all of the development
-              environment. Interested in devising a better problem-solving
-              method for challenging tasks, and learning new technologies and
-              tools if the need arises
+              Software Engineer with around 6 years experience specializing in
+              backend, frontend UI, and Cross-platform desktop application
+              development. Possess comprehensive knowledge of JavaScript with
+              solid understanding of asynchronous programming. Super nerd who
+              enjoys to customize the development environment. Interested in
+              devising a better problem-solving method for challenging tasks,
+              and learning new technologies and tools if the need arises.
             </p>
           </div>
         </div>
@@ -93,6 +95,26 @@
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
         <div data-date="July 2019 – Present">
+          <h3>MSCI INC., Pune, Maharashtra</h3>
+          <h4>ASSOCIATE</h4>
+          <ul>
+            <li>
+              Development of frontend applications using React.js framework around the finance domain in collaboration with Microsoft.
+            </li>
+            <li>Producing clean, efficient code based on specifications</li>
+            <li>
+              Worked closely with software development and testing team members
+              to design and develop robust solutions to meet client requirements
+              for functionality, scalability and performance.
+            </li>
+            <li>Integrate software components and third-party programs</li>
+            <li>
+              Estimated work hours and tracked progress using Scrum methodology.
+            </li>
+            <li>Stay up-to-date on emerging technologies</li>
+          </ul>
+        </div>
+        <div data-date="July 2019 – September 2020">
           <h3>CALSOFT INC., Pune, Maharashtra</h3>
           <h4>SENIOR SOFTWARE DEVELOPMENT ENGINEER</h4>
           <ul>
@@ -133,15 +155,9 @@
             <li>
               Recommend improvements to existing software programs as necessary
             </li>
-            <li>
-              Optimize applications for maximum speed and scalability
-            </li>
-            <li>
-              Ensure the technical feasibility of UI/UX designs
-            </li>
-            <li>
-              Stay up-to-date on emerging technologies
-            </li>
+            <li>Optimize applications for maximum speed and scalability</li>
+            <li>Ensure the technical feasibility of UI/UX designs</li>
+            <li>Stay up-to-date on emerging technologies</li>
           </ul>
         </div>
         <div data-date="August 2015 – November 2017">
@@ -194,13 +210,36 @@
         <div class="row">
           <div class="project shadow-large">
             <div class="project-image">
+              <img src="images/msci-logo.png" />
+            </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3>ESG Manager: ClimateRisk Lab</h3>
+              <p>
+                ESG Manager (ESGM) is a client-only portal where you can access all MSCI ESG Research products including ESG ClimateRisk, ESG Ratings, ESG Controversies, etc. ClimateRisk Lab is designed to provide corporate and institutional investors transparency into a company's climate-related risks and opportunities, in accordance with the recommendations from the Task Force on Climate related Financial Disclosures (TCFD).
+              </p>
+              <ul class="project-info-points">
+                <li>
+                  Understanding the business requirements and developing
+                  customer-facing UI ReactJs Framework.
+                </li>
+                <li>Integration of PowerBI reports to visualize Climate Risk and business related data.</li>
+                <li>Development and consumption of NodeJs APIs with ExpressJs.</li>
+                <li>
+                  Implementing reusable UI-components with Microsoft Fluent-UI.
+                </li>
+              </ul>
+              <a href="http://www.msci.com/">View Project</a>
+            </div>
+            <!-- End .project-info -->
+          </div>
+          <div class="project shadow-large">
+            <div class="project-image">
               <img src="images/seagate.png" />
             </div>
             <!-- End .project-image -->
             <div class="project-info">
-              <h3>
-                Seagate: Cloud Storage Manager
-              </h3>
+              <h3>Seagate: Cloud Storage Manager</h3>
               <p>
                 Cloud Storage Manager (CSM) is a virtualization layer that
                 provides functionality to configure and provision storage,
@@ -211,10 +250,10 @@
                   Understanding the business requirements and developing
                   customer-facing UI VueJs Framework.
                 </li>
-                <li>Interaction with development teams to integrate code.</li>
-                <li>P2P distributed processing using docker containers.</li>
+                <li>Development and consumption of NodeJs APIs with ExpressJs.</li>
+                <li>Implementing reusable UI-components as per UI-styleguide.</li>
                 <li>
-                  Implementing reusable UI-components as per UI-styleguide.
+                  Developed overall application with ES6 standards for better usages of javascript modules.
                 </li>
               </ul>
               <a href="http://www.seagate.com/">View Project</a>
@@ -357,9 +396,9 @@
       <h2 class="heading">Skills</h2>
       <ul>
         <li>JavaScript</li>
-        <li>VueJs</li>
         <li>ReactJs</li>
         <li>Node.js</li>
+        <li>VueJs</li>
         <li>MongoDB</li>
         <li>ElectronJs</li>
         <li>Python</li>
@@ -404,7 +443,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-5 copyright">
-            <p>Copyright &copy; 2020 VAIBHAV BHAVSAR</p>
+            <p>Copyright &copy; 2021 VAIBHAV BHAVSAR</p>
           </div>
           <div class="col-sm-2 top">
             <span id="to-top">
