--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="#about">About</a>
         </li>
         <li>
-          <a href="/react-ultimate-resume" target="_self">Portfolio</a>
+          <a href="https://vaibhav6233m.github.io/Portfolio" target="_blank">Portfolio</a>
         </li>
         <li>
           <a href="#experience">Experience</a>
