--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           <a href="#about">About</a>
         </li>
         <li>
-          <a href="https://vaibhav6233m.github.io/Portfolio" target="_blank">Portfolio</a>
+          <a href="https://vaibhav6233m.github.io/portfolio" target="_blank"
+            >Portfolio</a
+          >
         </li>
         <li>
           <a href="#experience">Experience</a>
@@ -45,7 +47,6 @@
         <li>
           <a href="#skills">Skills</a>
         </li>
-        <!-- <li><a href="#contact">Contact</a></li> -->
       </ul>
     </header>
     <!-- End header -->
@@ -99,7 +100,8 @@
           <h4>ASSOCIATE</h4>
           <ul>
             <li>
-              Development of frontend applications using React.js framework around the finance domain in collaboration with Microsoft.
+              Development of frontend applications using React.js framework
+              around the finance domain in collaboration with Microsoft.
             </li>
             <li>Producing clean, efficient code based on specifications</li>
             <li>
@@ -216,15 +218,26 @@
             <div class="project-info">
               <h3>ESG Manager: ClimateRisk Lab</h3>
               <p>
-                ESG Manager (ESGM) is a client-only portal where you can access all MSCI ESG Research products including ESG ClimateRisk, ESG Ratings, ESG Controversies, etc. ClimateRisk Lab is designed to provide corporate and institutional investors transparency into a company's climate-related risks and opportunities, in accordance with the recommendations from the Task Force on Climate related Financial Disclosures (TCFD).
+                ESG Manager (ESGM) is a client-only portal where you can access
+                all MSCI ESG Research products including ESG ClimateRisk, ESG
+                Ratings, ESG Controversies, etc. ClimateRisk Lab is designed to
+                provide corporate and institutional investors transparency into
+                a company's climate-related risks and opportunities, in
+                accordance with the recommendations from the Task Force on
+                Climate related Financial Disclosures (TCFD).
               </p>
               <ul class="project-info-points">
                 <li>
                   Understanding the business requirements and developing
                   customer-facing UI ReactJs Framework.
                 </li>
-                <li>Integration of PowerBI reports to visualize Climate Risk and business related data.</li>
-                <li>Development and consumption of NodeJs APIs with ExpressJs.</li>
+                <li>
+                  Integration of PowerBI reports to visualize Climate Risk and
+                  business related data.
+                </li>
+                <li>
+                  Development and consumption of NodeJs APIs with ExpressJs.
+                </li>
                 <li>
                   Implementing reusable UI-components with Microsoft Fluent-UI.
                 </li>
@@ -250,10 +263,15 @@
                   Understanding the business requirements and developing
                   customer-facing UI VueJs Framework.
                 </li>
-                <li>Development and consumption of NodeJs APIs with ExpressJs.</li>
-                <li>Implementing reusable UI-components as per UI-styleguide.</li>
                 <li>
-                  Developed overall application with ES6 standards for better usages of javascript modules.
+                  Development and consumption of NodeJs APIs with ExpressJs.
+                </li>
+                <li>
+                  Implementing reusable UI-components as per UI-styleguide.
+                </li>
+                <li>
+                  Developed overall application with ES6 standards for better
+                  usages of javascript modules.
                 </li>
               </ul>
               <a href="http://www.seagate.com/">View Project</a>
