--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
           <div class="col-md-8">
             <p>
               Software Engineer with around 6 years experience specializing in
-              backend, frontend UI, and Cross-platform desktop application
-              development. Possess comprehensive knowledge of JavaScript with
-              solid understanding of asynchronous programming. Super nerd who
-              enjoys to customize the development environment. Interested in
+              the backend, frontend UI, and Cross-platform desktop application
+              development. Possess comprehensive knowledge of JavaScript with a
+              solid understanding of asynchronous programming. A super nerd who
+              enjoys customizing the development environment. Interested in
               devising a better problem-solving method for challenging tasks,
               and learning new technologies and tools if the need arises.
             </p>
@@ -95,25 +95,29 @@
     <div id="experience" class="background-alt">
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
-        <div data-date="July 2019 – Present">
+        <div data-date="September 2020– Present">
           <h3>MSCI INC., Pune, Maharashtra</h3>
           <h4>ASSOCIATE</h4>
           <ul>
             <li>
-              Development of frontend applications using React.js framework
+              Development of frontend applications using React framework
               around the finance domain in collaboration with Microsoft.
             </li>
             <li>Producing clean, efficient code based on specifications</li>
             <li>
+              Built and deployed overall service infrastructure utilizing Docker
+              container and Microsoft Azure Services, focusing on high
+              availability and auto-scaling.
+            </li>
+            <li>
               Worked closely with software development and testing team members
               to design and develop robust solutions to meet client requirements
-              for functionality, scalability and performance.
+              for functionality, scalability, and performance.
             </li>
             <li>Integrate software components and third-party programs</li>
             <li>
-              Estimated work hours and tracked progress using Scrum methodology.
+              Recommend improvements to existing software programs as necessary
             </li>
-            <li>Stay up-to-date on emerging technologies</li>
           </ul>
         </div>
         <div data-date="July 2019 – September 2020">
@@ -121,27 +125,29 @@
           <h4>SENIOR SOFTWARE DEVELOPMENT ENGINEER</h4>
           <ul>
             <li>
-              Developing frontend applications using Vue.js framework as per
-              client’s requirements
+              Developing frontend applications using Vue as per
+              client's requirements.
             </li>
-            <li>Producing clean, efficient code based on specifications</li>
             <li>
-              Worked closely with software development and testing team members
-              to design and develop robust solutions to meet client requirements
-              for functionality, scalability and performance.
+              Developed an easy-to-use hardware booking tool for developers with
+              hardware availability tracking.
             </li>
-            <li>Integrate software components and third-party programs</li>
+            <li>Contribution to Open Source projects.</li>
+            <li>
+              Contribute to team and organizational improvements in process and
+              infrastructure.
+            </li>
             <li>
               Estimated work hours and tracked progress using Scrum methodology.
             </li>
-            <li>Stay up-to-date on emerging technologies</li>
+            <li>Stay up-to-date on emerging technologies.</li>
           </ul>
         </div>
         <div data-date="December 2017 – June 2019">
           <h3>WINJIT TECHNOLOGIES PVT. LTD., Nasik, Maharashtra</h3>
           <h4>SOFTWARE ENGINEER & FULL STACK DEVELOPER</h4>
           <ul>
-            <li>Code, test and operate Node.js based services</li>
+            <li>Code, test and operate NodeJs based services</li>
             <li>Build customer-facing UI and back-end services</li>
             <li>
               Define code architecture decisions to support a high-performance
@@ -229,7 +235,7 @@
               <ul class="project-info-points">
                 <li>
                   Understanding the business requirements and developing
-                  customer-facing UI ReactJs Framework.
+                  customer-facing UI in React.
                 </li>
                 <li>
                   Integration of PowerBI reports to visualize Climate Risk and
@@ -261,7 +267,7 @@
               <ul class="project-info-points">
                 <li>
                   Understanding the business requirements and developing
-                  customer-facing UI VueJs Framework.
+                  customer-facing UI in Vue.
                 </li>
                 <li>
                   Development and consumption of NodeJs APIs with ExpressJs.
@@ -294,7 +300,7 @@
               <ul class="project-info-points">
                 <li>
                   Understanding the business requirements and developing
-                  customer-facing UI VueJs Framework.
+                  customer-facing UI in Vue.
                 </li>
                 <li>Interaction with development teams to integrate code.</li>
                 <li>P2P distributed processing using docker containers.</li>
@@ -329,7 +335,7 @@
                 <li>
                   Implementation and Integration of Iagon Cloud Services in a
                   Cross-platform desktop application using ElectronJs and
-                  ReactJs.
+                  React.
                 </li>
                 <li>
                   Sharing Protocol for encryption and decryption of files.
@@ -414,14 +420,16 @@
       <h2 class="heading">Skills</h2>
       <ul>
         <li>JavaScript</li>
-        <li>ReactJs</li>
-        <li>Node.js</li>
-        <li>VueJs</li>
+        <li>React</li>
+        <li>NodeJs</li>
+        <li>Vue</li>
+        <li>TypeScript</li>
+        <li>Microsoft Azure/li></li>
         <li>MongoDB</li>
-        <li>ElectronJs</li>
-        <li>Python</li>
-        <li>AWS</li>
         <li>Docker</li>
+        <li>AWS</li>
+        <li>Python</li>
+        <li>ElectronJs</li>
         <li>IPFS</li>
         <li>MySQL</li>
       </ul>
