--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <li>NodeJs</li>
         <li>Vue</li>
         <li>TypeScript</li>
-        <li>Microsoft Azure/li></li>
+        <li>Microsoft Azure</li>
         <li>MongoDB</li>
         <li>Docker</li>
         <li>AWS</li>
