--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <h4>ASSOCIATE</h4>
           <ul>
             <li>
-              Development of frontend applications using React framework
-              around the finance domain in collaboration with Microsoft.
+              Development of frontend applications using React framework around
+              the finance domain in collaboration with Microsoft.
             </li>
             <li>Producing clean, efficient code based on specifications</li>
             <li>
@@ -125,8 +125,8 @@
           <h4>SENIOR SOFTWARE DEVELOPMENT ENGINEER</h4>
           <ul>
             <li>
-              Developing frontend applications using Vue as per
-              client's requirements.
+              Developing frontend applications using Vue as per client's
+              requirements.
             </li>
             <li>
               Developed an easy-to-use hardware booking tool for developers with
@@ -258,11 +258,14 @@
             </div>
             <!-- End .project-image -->
             <div class="project-info">
-              <h3>Seagate: Cloud Storage Manager</h3>
+              <h3>CORTX: Management Portal</h3>
               <p>
-                Cloud Storage Manager (CSM) is a virtualization layer that
-                provides functionality to configure and provision storage,
-                manage users,set policies and provide statistics.
+                CORTX Management Portal provides a user interface (UI) to
+                facilitate the easy utility of different CORTX components and
+                features. It communicates with CORTX manager through the
+                middleware application. The CORTX Manager communicates with
+                different CORTX components and features and gives proper
+                response to CORTX Management Portal.
               </p>
               <ul class="project-info-points">
                 <li>
@@ -334,8 +337,7 @@
                 </li>
                 <li>
                   Implementation and Integration of Iagon Cloud Services in a
-                  Cross-platform desktop application using ElectronJs and
-                  React.
+                  Cross-platform desktop application using ElectronJs and React.
                 </li>
                 <li>
                   Sharing Protocol for encryption and decryption of files.
