update klarna experience

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My Portfolio</title>
+    <title>Vaibhav Bhavsar</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link
@@ -55,7 +55,7 @@
         <h1>VAIBHAV BHAVSAR</h1>
         <h2>Software Engineer · Full Stack Developer</h2>
         <a
-          href="assets/VaibhavB_Resume.pdf"
+          href="assets/VaibhavB_Resume_2023.pdf"
           target="_blank"
           class="btn-rounded-white"
           >Download Resume</a
@@ -79,13 +79,12 @@
           </div>
           <div class="col-md-8">
             <p>
-              Software Engineer with around 6 years experience specializing in
-              the backend, frontend UI, and Cross-platform desktop application
-              development. Possess comprehensive knowledge of JavaScript with a
-              solid understanding of asynchronous programming. A super nerd who
-              enjoys customizing the development environment. Interested in
-              devising a better problem-solving method for challenging tasks,
-              and learning new technologies and tools if the need arises.
+              Experienced software professional with <b>8 years</b> of expertise
+              in <b>JavaScript</b> technologies, demonstrating a strong passion
+              for advancing my software career. Committed to delivering
+              <b>cutting-edge</b>
+              solutions and constantly expanding my knowledge to stay at the
+              <b>forefront</b> of the industry.
             </p>
           </div>
         </div>
@@ -95,7 +94,30 @@
     <div id="experience" class="background-alt">
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
-        <div data-date="September 2020– Present">
+        <div data-date="December 2021 - Present">
+          <h3>Klarna, Giessen, Germany</h3>
+          <h4>Senior Software Engineer</h4>
+          <ul>
+            <li>
+              Lead development e orts for a cross-platform mobile application
+              using React Native, TypeScript, and Node.js, implementing backend
+              driven frontend approach.
+            </li>
+            <li>
+              Utilize Datadog dashboard for monitoring and optimizing
+              application performance.
+            </li>
+            <li>
+              Implement event tracking and analysis using Amplitude for
+              data-driven decision-making.
+            </li>
+            <li>
+              Mentor junior engineers, conduct code reviews, and promote best
+              practices for code quality and testing.
+            </li>
+          </ul>
+        </div>
+        <div data-date="September 2020 – November 2021">
           <h3>MSCI INC., Pune, Maharashtra</h3>
           <h4>ASSOCIATE</h4>
           <ul>
@@ -218,6 +240,38 @@
         <div class="row">
           <div class="project shadow-large">
             <div class="project-image">
+              <img src="images/klarna.png" />
+            </div>
+            <!-- End .project-image -->
+            <div class="project-info">
+              <h3>Spending Limit</h3>
+              <p>
+                The spending limit is like a "money meter" that Klarna provides.
+                It gives you an estimate of how much you can spend on your next
+                purchases. It's not an exact amount, but more of a rough idea.
+                The meter can go up or down depending on your purchases and
+                payments.
+              </p>
+              <ul class="project-info-points">
+                <li>
+                  Implemented backend driven frontend approach for rendering the
+                  spending limit widget on the client app.
+                </li>
+                <li>
+                  Developed main dashboard for managing the spending limit
+                  widget, including various states and rejections.
+                </li>
+                <li>
+                  Collaborated with product team to build UI based on Figma
+                  designs and integrated APIs for real-time updates.
+                </li>
+              </ul>
+              <a href="https://www.klarna.com/">View Project</a>
+            </div>
+            <!-- End .project-info -->
+          </div>
+          <div class="project shadow-large">
+            <div class="project-image">
               <img src="images/msci-logo.png" />
             </div>
             <!-- End .project-image -->
@@ -316,43 +370,45 @@
             </div>
             <!-- End .project-info -->
           </div>
-          <div class="project shadow-large">
-            <div class="project-image">
-              <img src="images/iagon.png" />
-            </div>
-            <!-- End .project-image -->
-            <div class="project-info">
-              <h3>Iagon – Distributed Storage and Processing</h3>
-              <p>
-                IAGON is an Open Source platform for harnessing the storage
-                capacities and processing power of multiple computers over a
-                decentralized Blockchain grid.
-              </p>
-              <ul class="project-info-points">
-                <li>
-                  Lead in the development and implementation of distributed
-                  storage using BitTorrent technology and processing
-                  functionality using IPFS (Distributed Web) and Docker
-                  containers in Iagon Cloud Services.
-                </li>
-                <li>
-                  Implementation and Integration of Iagon Cloud Services in a
-                  Cross-platform desktop application using ElectronJs and React.
-                </li>
-                <li>
-                  Sharing Protocol for encryption and decryption of files.
-                </li>
-                <li>
-                  Cross Platform Desktop Iagon Cloud App for Windows, Linux, Mac
-                  Operating System.
-                </li>
-              </ul>
-              <a href="http://iagon.com">View Project</a>
-            </div>
-            <!-- End .project-info -->
-          </div>
+
           <a id="view-more-projects" href="#">View More Projects</a>
           <div id="more-projects" class="row">
+            <div class="project shadow-large">
+              <div class="project-image">
+                <img src="images/iagon.png" />
+              </div>
+              <!-- End .project-image -->
+              <div class="project-info">
+                <h3>Iagon – Distributed Storage and Processing</h3>
+                <p>
+                  IAGON is an Open Source platform for harnessing the storage
+                  capacities and processing power of multiple computers over a
+                  decentralized Blockchain grid.
+                </p>
+                <ul class="project-info-points">
+                  <li>
+                    Lead in the development and implementation of distributed
+                    storage using BitTorrent technology and processing
+                    functionality using IPFS (Distributed Web) and Docker
+                    containers in Iagon Cloud Services.
+                  </li>
+                  <li>
+                    Implementation and Integration of Iagon Cloud Services in a
+                    Cross-platform desktop application using ElectronJs and
+                    React.
+                  </li>
+                  <li>
+                    Sharing Protocol for encryption and decryption of files.
+                  </li>
+                  <li>
+                    Cross Platform Desktop Iagon Cloud App for Windows, Linux,
+                    Mac Operating System.
+                  </li>
+                </ul>
+                <a href="http://iagon.com">View Project</a>
+              </div>
+              <!-- End .project-info -->
+            </div>
             <div class="project shadow-large">
               <div class="project-image">
                 <img src="images/morpheus.network.png" />
@@ -423,15 +479,22 @@
       <ul>
         <li>JavaScript</li>
         <li>React</li>
-        <li>NodeJs</li>
+        <li>Redux</li>
         <li>Vue</li>
+        <li>Node.js</li>
         <li>TypeScript</li>
-        <li>Microsoft Azure</li>
-        <li>MongoDB</li>
+        <li>Express</li>
+        <li>Git</li>
+        <li>Electron</li>
         <li>Docker</li>
+        <li>Databases</li>
+        <li>Jest</li>
+        <li>Agile</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Azure</li>
         <li>AWS</li>
         <li>Python</li>
-        <li>ElectronJs</li>
         <li>IPFS</li>
         <li>MySQL</li>
       </ul>
@@ -471,7 +534,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-5 copyright">
-            <p>Copyright &copy; 2021 VAIBHAV BHAVSAR</p>
+            <p>Copyright &copy; 2023 VAIBHAV BHAVSAR</p>
           </div>
           <div class="col-sm-2 top">
             <span id="to-top">
@@ -495,7 +558,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/vaibhav-bhavsar-000bb276/"
+                  href="https://www.linkedin.com/in/vaibhavbhavsar"
                   target="_blank"
                 >
                   <i class="fa fa-linkedin" aria-hidden="true"></i>
